==> peakhunt/longan_nano/GD32VF103_Firmware_Library_V1.0.2/Examples/USBFS/USB_Device/Audio/Source/gd32vf103_audio_codec.c <==
#include "gd32vf103_audio_codec.h"
#define I2S_ENABLE_MASK                 (0x0400)
#define CODEC_RESET_DELAY               (0x4FFF)
    #define CODEC_STANDARD                 0x04
    #define I2S_STANDARD                   I2S_STD_PHILLIPS
    #define CODEC_STANDARD                 0x00
    #define I2S_STANDARD                   I2S_STD_MSB
    #define CODEC_STANDARD                 0x08
    #define I2S_STANDARD                   I2S_STD_LSB
#define CODEC_ADDRESS                      0x94  /* b00100111 */

static void Codec_AudioInterface_Init(uint32_t AudioFreq)
{
    I2S_AudioFreq = AudioFreq;

    /* Enable the CODEC_I2S peripheral clock */
    rcu_periph_clock_enable(CODEC_I2S_CLK);

    /* CODEC_I2S peripheral configuration */
    spi_i2s_deinit(CODEC_I2S);

    /* CODEC_I2S peripheral configuration */
    i2s_psc_config(CODEC_I2S, AudioFreq, I2S_FRAMEFORMAT_DT16B_CH16B, 
#ifdef CODEC_MCLK_ENABLED
    I2S_MCKOUT_ENABLE
#elif defined(CODEC_MCLK_DISABLED)
    I2S_MCKOUT_DISABLE
#endif
    );

    i2s_init(CODEC_I2S, I2S_MODE_MASTERTX, I2S_STD_LSB, I2S_CKPL_LOW);

    /* Enable the I2S DMA TX request */
    spi_dma_enable(CODEC_I2S, SPI_DMA_TRANSMIT);
    /* The I2S peripheral will be enabled only in the EVAL_AUDIO_Play() function 
       or by user functions if DMA mode not enabled */  
}

static void Codec_AudioInterface_DeInit(void)
{
    /* Disable the CODEC_I2S peripheral (in case it hasn't already been disabled) */
    i2s_disable(CODEC_I2S);

    /* Deinitialize the CODEC_I2S peripheral */
    spi_i2s_deinit(CODEC_I2S);

    /* Disable the CODEC_I2S peripheral clock */
    rcu_periph_clock_disable(CODEC_I2S_CLK);
}

static void Codec_GPIO_Init(void)
{
    /* enable the clock */
    rcu_periph_clock_enable(RCU_AF);
    rcu_periph_clock_enable(CODEC_I2S_GPIO1_CLOCK);
    rcu_periph_clock_enable(CODEC_I2S_GPIO2_CLOCK);
    rcu_periph_clock_enable(CODEC_SPI_CLK);

    /* CODEC_I2C SCL and SDA pins configuration */
    gpio_init(CODEC_SPI_GPIO, GPIO_MODE_AF_OD, GPIO_OSPEED_50MHZ, CODEC_SPI_SCL_PIN | CODEC_SPI_SDA_PIN);

    /* CODEC_I2S pins configuraiton: WS, SCK and SD pins */
    gpio_init(CODEC_I2S_GPIO, GPIO_MODE_AF_PP, GPIO_OSPEED_50MHZ, CODEC_I2S_WS_PIN | CODEC_I2S_SCK_PIN | CODEC_I2S_SD_PIN);

#ifdef CODEC_MCLK_ENABLED
    /* CODEC_I2S pins configuraiton: MCK pin */
    gpio_init(CODEC_I2S_MCK_GPIO, GPIO_MODE_AF_PP, GPIO_OSPEED_50MHZ, CODEC_I2S_MCK_PIN);
#endif /* CODEC_MCLK_ENABLED */
}

static void Codec_GPIO_DeInit(void)
{
    /* Deinitialize all the GPIOs used by the driver (EXCEPT the I2C IOs since 
     they are used by the IOExpander as well) */
    gpio_init(CODEC_I2S_GPIO, GPIO_MODE_IN_FLOATING, GPIO_OSPEED_50MHZ, CODEC_I2S_WS_PIN | CODEC_I2S_SCK_PIN | CODEC_I2S_SD_PIN);

#ifdef CODEC_MCLK_ENABLED
    /* CODEC_I2S pins deinitialization: MCK pin */
    gpio_init(CODEC_I2S_MCK_GPIO, GPIO_MODE_IN_FLOATING, GPIO_OSPEED_50MHZ, CODEC_I2S_MCK_PIN);
#endif /* CODEC_MCLK_ENABLED */
}

void Audio_MAL_Init(void)  
{   
    /* Enable the DMA clock */
    rcu_periph_clock_enable(AUDIO_MAL_DMA_CLOCK);

    /* Configure the DMA Stream */
    dma_channel_enable(AUDIO_MAL_DMA, AUDIO_MAL_DMA_CHANNEL);
    dma_deinit(AUDIO_MAL_DMA, AUDIO_MAL_DMA_CHANNEL);

    /* Set the parameters to be configured */
    DMA_InitStructure.periph_addr = CODEC_I2S_ADDRESS;
    DMA_InitStructure.memory_addr = (uint32_t)0;/* This field will be configured in play function */
    DMA_InitStructure.direction = DMA_MEMORY_TO_PERIPHERAL;
    DMA_InitStructure.number = (uint32_t)0xFFFE;/* This field will be configured in play function */
    DMA_InitStructure.periph_inc = DMA_PERIPH_INCREASE_DISABLE;
    DMA_InitStructure.memory_inc = DMA_MEMORY_INCREASE_ENABLE;
    DMA_InitStructure.periph_width = DMA_PERIPHERAL_WIDTH_16BIT;
    DMA_InitStructure.memory_width = DMA_MEMORY_WIDTH_16BIT;

#ifdef AUDIO_MAL_MODE_NORMAL
    dma_circulation_disable(AUDIO_MAL_DMA, AUDIO_MAL_DMA_CHANNEL);
#elif defined(AUDIO_MAL_MODE_CIRCULAR)
    dma_circulation_enable(AUDIO_MAL_DMA, AUDIO_MAL_DMA_CHANNEL);
#else
    #error "AUDIO_MAL_MODE_NORMAL or AUDIO_MAL_MODE_CIRCULAR should be selected !!"
#endif /* AUDIO_MAL_MODE_NORMAL */  

    DMA_InitStructure.priority = DMA_PRIORITY_HIGH;
    dma_init(AUDIO_MAL_DMA, AUDIO_MAL_DMA_CHANNEL, &DMA_InitStructure);

   /* Enable the I2S DMA request */
   spi_dma_enable(CODEC_I2S, SPI_DMA_TRANSMIT);
}

void Audio_MAL_DeInit(void)  
{
    /* Disable the DMA Channel before the deinit */
    dma_channel_disable(AUDIO_MAL_DMA, AUDIO_MAL_DMA_CHANNEL);

    /* Dinitialize the DMA Channel */
    dma_deinit(AUDIO_MAL_DMA, AUDIO_MAL_DMA_CHANNEL);

    /* The DMA clock is not disabled, since it can be used by other streams */
}

void Audio_MAL_Play(uint32_t Addr, uint32_t Size)
{
    /* Enable the I2S DMA Stream*/
    dma_channel_disable(AUDIO_MAL_DMA, AUDIO_MAL_DMA_CHANNEL);

    /* Clear the Interrupt flag */
    dma_interrupt_flag_clear(AUDIO_MAL_DMA, AUDIO_MAL_DMA_CHANNEL, DMA_INT_FLAG_FTF);

    /* Configure the buffer address and size */
    DMA_InitStructure.memory_addr = (uint32_t)Addr;
    DMA_InitStructure.number = (uint32_t)(Size*2);

    /* Configure the DMA Stream with the new parameters */
    dma_init(AUDIO_MAL_DMA, AUDIO_MAL_DMA_CHANNEL, &DMA_InitStructure);

    /* Enable the I2S DMA Stream*/
    dma_channel_enable(AUDIO_MAL_DMA, AUDIO_MAL_DMA_CHANNEL);

    /* If the I2S peripheral is still not enabled, enable it */
    if ((SPI_I2SCTL(CODEC_I2S) & I2S_ENABLE_MASK) == 0)
    {
        i2s_enable(CODEC_I2S);
    }
}

void Audio_MAL_PauseResume(uint32_t Cmd, uint32_t Addr, uint32_t Size)
{
    /* Pause the audio file playing */
    if (Cmd == AUDIO_PAUSE)
    {
        /* Stop the current DMA request by resetting the I2S cell */
        Codec_AudioInterface_DeInit();

        /* Re-configure the I2S interface for the next resume operation */
        Codec_AudioInterface_Init(I2S_AudioFreq);

        /* Disable the DMA Stream */
        dma_channel_disable(AUDIO_MAL_DMA, AUDIO_MAL_DMA_CHANNEL);

        /* Clear the Interrupt flag */
        dma_flag_clear(AUDIO_MAL_DMA, AUDIO_MAL_DMA_CHANNEL, AUDIO_MAL_DMA_FLAG_ALL);
    }
    else /* AUDIO_RESUME */
    {
        /* Configure the buffer address and size */
        DMA_InitStructure.memory_addr = (uint32_t)Addr;
        DMA_InitStructure.number = (uint32_t)(Size*2);

        /* Configure the DMA Stream with the new parameters */
        dma_init(AUDIO_MAL_DMA, AUDIO_MAL_DMA_CHANNEL, &DMA_InitStructure);

        /* Enable the I2S DMA Stream*/
        dma_channel_enable(AUDIO_MAL_DMA, AUDIO_MAL_DMA_CHANNEL);

        /* If the I2S peripheral is still not enabled, enable it */
        if ((SPI_I2SCTL(CODEC_I2S) & I2S_ENABLE_MASK) == 0)
        {
            i2s_enable(CODEC_I2S);
        }
    }
}

void Audio_MAL_Stop(void)
{
    /* Stop the Transfer on the I2S side: Stop and disable the DMA stream */
    dma_channel_disable(AUDIO_MAL_DMA, AUDIO_MAL_DMA_CHANNEL);

    /* Clear all the DMA flags for the next transfer */
    dma_flag_clear(AUDIO_MAL_DMA, AUDIO_MAL_DMA_CHANNEL, AUDIO_MAL_DMA_FLAG_ALL);

    /* Stop the current DMA request by resetting the I2S cell */
    Codec_AudioInterface_DeInit();

    /* Re-configure the I2S interface for the next paly operation */
    Codec_AudioInterface_Init(I2S_AudioFreq);
}
